Edited pom in ui to fix issue